force-app/main/default/objects/User/fields/ActivatedByUserId__c.field-meta.xml
<CustomField>
    <fullName>ActivatedByUserId__c</fullName>
    <description>SFDC User Id who deactivated this user record</description>
    <inlineHelpText>SFDC User Id who deactivated this user record</inlineHelpText>
    <label>ActivatedByUserId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>