force-app/main/default/objects/User/fields/ActivatedDate__c.field-meta.xml
<CustomField>
    <fullName>ActivatedDate__c</fullName>
    <description>Date of Activation of this user record</description>
    <inlineHelpText>Date of Activation of this user record</inlineHelpText>
    <label>ActivatedDate</label>
    <type>Date</type>
</CustomField>