force-app/main/default/objects/User/fields/Brainshark_HR_Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>Brainshark_HR_Activation_Date__c</fullName>
    <description>This is a Custom Activation Date field which will be populated by a process builder when the &apos;HRActive&apos; field is checked to true. This field is being used for the User Sync with Brainshark</description>
    <label>Brainshark HR Activation Date</label>
    <type>DateTime</type>
</CustomField>