force-app/main/default/objects/User/fields/Brainshark_isActive__c.field-meta.xml
<CustomField>
    <fullName>Brainshark_isActive__c</fullName>
    <description>This field is being used in the report and in the mapping for the User Sync between Salesforce to Brianshark.</description>
    <formula>IF(ISPICKVAL(UserType, &apos;Standard&apos;), HRActive__c, IsActive)</formula>
    <label>Brainshark isActive</label>
    <type>Checkbox</type>
</CustomField>