force-app/main/default/objects/User/fields/Brainshark_Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Brainshark_Profile_Name__c</fullName>
    <description>This field is being used in the report and in the mapping for the User Sync between Salesforce to Brianshark.</description>
    <formula>IF(Profile.Name == &apos;Community Lite Profile&apos;, &apos;Community Lite Profile&apos;, &apos;Sales Profile&apos;)</formula>
    <label>Brainshark Profile Name</label>
    <type>Text</type>
</CustomField>