force-app/main/default/objects/User/fields/BusinessArea__c.field-meta.xml
<CustomField>
    <fullName>BusinessArea__c</fullName>
    <label>Business Area</label>
    <length>80</length>
    <type>Text</type>
</CustomField>