force-app/main/default/objects/User/fields/BusinessTitle__c.field-meta.xml
<CustomField>
    <fullName>BusinessTitle__c</fullName>
    <label>Business Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>