force-app/main/default/objects/User/fields/Community_ContactId__c.field-meta.xml
<CustomField>
    <fullName>Community_ContactId__c</fullName>
    <description>Historical Retention : store the Community Contact Id during the creation of the Community User</description>
    <label>Community ContactId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>