force-app/main/default/objects/User/fields/ConsolidatedBusinessArea__c.field-meta.xml
<CustomField>
    <fullName>ConsolidatedBusinessArea__c</fullName>
    <label>Consolidated Business Area</label>
    <length>80</length>
    <type>Text</type>
</CustomField>