force-app/main/default/objects/User/fields/CostCenter__c.field-meta.xml
<CustomField>
    <fullName>CostCenter__c</fullName>
    <label>Cost Center</label>
    <length>25</length>
    <type>Text</type>
</CustomField>