force-app/main/default/objects/User/fields/DeactivatedByUserId__c.field-meta.xml
<CustomField>
    <fullName>DeactivatedByUserId__c</fullName>
    <description>SFDC User Id who deactivated this user record</description>
    <inlineHelpText>SFDC User Id who deactivated this user record</inlineHelpText>
    <label>DeactivatedByUserId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>