force-app/main/default/objects/User/fields/DeactivatedDate__c.field-meta.xml
<CustomField>
    <fullName>DeactivatedDate__c</fullName>
    <description>Deactivation Date of the User Record</description>
    <inlineHelpText>Deactivation Date of the User Record</inlineHelpText>
    <label>DeactivatedDate</label>
    <type>Date</type>
</CustomField>