force-app/main/default/objects/User/fields/Deactivation_Sync_IDM_DGX__c.field-meta.xml
<CustomField>
    <fullName>Deactivation_Sync_IDM_DGX__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deactivation Sync IDM</label>
    <type>Checkbox</type>
</CustomField>