force-app/main/default/objects/User/fields/Deactivation_Sync_IDM_GRID__c.field-meta.xml
<CustomField>
    <fullName>Deactivation_Sync_IDM_GRID__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deactivation_Sync_IDM_GRID</label>
    <type>Checkbox</type>
</CustomField>