force-app/main/default/objects/User/fields/Do_Not_Send_Welcome_Email__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Send_Welcome_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Send Welcome Email</label>
    <type>Checkbox</type>
</CustomField>