force-app/main/default/objects/User/fields/DO_NOT_USE__c.field-meta.xml
<CustomField>
    <fullName>DO_NOT_USE__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for NVContacts wherein NVContacts still use the Inactive user but shows the User&apos;s Name, Email in Sales Manager Name, Email field. Use this field to filter out the users from among the inactive users.</description>
    <inlineHelpText>Used for NVContacts wherein NVContacts still use the Inactive user but shows the User&apos;s Name, Email in Sales Manager Name, Email field.</inlineHelpText>
    <label>DO NOT USE</label>
    <type>Checkbox</type>
</CustomField>