force-app/main/default/objects/User/fields/Don_t_Sync_to_Brainshark__c.field-meta.xml
<CustomField>
    <fullName>Don_t_Sync_to_Brainshark__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is being used in the report for the User Sync between Salesforce to Brianshark.</description>
    <label>Don&apos;t Sync to Brainshark</label>
    <type>Checkbox</type>
</CustomField>