force-app/main/default/objects/User/fields/EMPLOYEEGUID__c.field-meta.xml
<CustomField>
    <fullName>EMPLOYEEGUID__c</fullName>
    <description>32 characters guid : Active Directory Unique Employee Number that gets copied over from Workday thru the WorkdayUserSync job.</description>
    <externalId>true</externalId>
    <inlineHelpText>32 characters guid : Active Directory Unique Employee Number that gets copied over from Workday thru the WorkdayUserSync job.</inlineHelpText>
    <label>EMPLOYEEGUID</label>
    <length>32</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>