force-app/main/default/objects/User/fields/EmployeeName__c.field-meta.xml
<CustomField>
    <fullName>EmployeeName__c</fullName>
    <formula>LastName &amp; &quot;, &quot; &amp; FirstName &amp; &quot; &quot; &amp;  MiddleInitial__c</formula>
    <label>Employee Name</label>
    <type>Text</type>
</CustomField>