force-app/main/default/objects/User/fields/First_Half_1H_Quota__c.field-meta.xml
<CustomField>
    <fullName>First_Half_1H_Quota__c</fullName>
    <label>First Half (1H) Quota</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>