force-app/main/default/objects/User/fields/Full_year_quota__c.field-meta.xml
<CustomField>
    <fullName>Full_year_quota__c</fullName>
    <formula>First_Half_1H_Quota__c +  Second_Half_2H_Quota__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full year quota</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>