force-app/main/default/objects/User/fields/GTC_Promo_Code__c.field-meta.xml
<CustomField>
    <fullName>GTC_Promo_Code__c</fullName>
    <description>Stores promo codes for GTC invites</description>
    <label>GTC Promo Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>