force-app/main/default/objects/User/fields/HireDate__c.field-meta.xml
<CustomField>
    <fullName>HireDate__c</fullName>
    <label>Hire Date</label>
    <type>Date</type>
</CustomField>