force-app/main/default/objects/User/fields/HRActive__c.field-meta.xml
<CustomField>
    <fullName>HRActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Shows employment status</description>
    <label>HRActive</label>
    <type>Checkbox</type>
</CustomField>