force-app/main/default/objects/User/fields/IDM_API_Call_Failure__c.field-meta.xml
<CustomField>
    <fullName>IDM_API_Call_Failure__c</fullName>
    <defaultValue>false</defaultValue>
    <description>IDM Wrapper Code threw exception. The wrapper code that is being called either from batch job of any any adhoc call threw exception</description>
    <inlineHelpText>Is there any exception from API Call through batch or adhoc calls?</inlineHelpText>
    <label>IDM - API Call Failure</label>
    <type>Checkbox</type>
</CustomField>