force-app/main/default/objects/User/fields/IDM_API_Call_Failure_Exception__c.field-meta.xml
<CustomField>
    <fullName>IDM_API_Call_Failure_Exception__c</fullName>
    <description>Exception details from API Call through batch or adhoc calls?</description>
    <inlineHelpText>Exception details from API Call through batch or adhoc calls?</inlineHelpText>
    <label>IDM - API Call Failure Exception</label>
    <type>TextArea</type>
</CustomField>