force-app/main/default/objects/User/fields/IDM_Assign_SOCRM_Role_Call_Initiated__c.field-meta.xml
<CustomField>
    <fullName>IDM_Assign_SOCRM_Role_Call_Initiated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>IDM - Assign SOCRM Role - API Call have been attempted</description>
    <inlineHelpText>IDM - Assign SOCRM Role - API Call have been attempted</inlineHelpText>
    <label>IDM - Assign SOCRM Role - Call Initiated</label>
    <type>Checkbox</type>
</CustomField>