force-app/main/default/objects/User/fields/IDM_Assign_SOCRM_Role_Call_Success__c.field-meta.xml
<CustomField>
    <fullName>IDM_Assign_SOCRM_Role_Call_Success__c</fullName>
    <defaultValue>false</defaultValue>
    <description>IDM - Assign SOCRM Role - API Call Succeeded?</description>
    <inlineHelpText>IDM - Assign SOCRM Role - API Call Succeeded?</inlineHelpText>
    <label>IDM - Assign SOCRM Role - Call Success</label>
    <type>Checkbox</type>
</CustomField>