force-app/main/default/objects/User/fields/IDM_Assign_SOCRM_Role_Date__c.field-meta.xml
<CustomField>
    <fullName>IDM_Assign_SOCRM_Role_Date__c</fullName>
    <description>Date/Time at which SOCRM Role Assignment was made from API</description>
    <inlineHelpText>Date/Time at which SOCRM Role Assignment was made from API</inlineHelpText>
    <label>IDM - Assign SOCRM Role - Date</label>
    <type>DateTime</type>
</CustomField>