force-app/main/default/objects/User/fields/IDM_DGX_Deactivation_Callout_Message__c.field-meta.xml
<CustomField>
    <fullName>IDM_DGX_Deactivation_Callout_Message__c</fullName>
    <description>Maintains user deactivation sync with IDM</description>
    <label>IDM_Deactivation_Callout_Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>