force-app/main/default/objects/User/fields/IDM_FederationIdentifier__c.field-meta.xml
<CustomField>
    <fullName>IDM_FederationIdentifier__c</fullName>
    <description>Copy of FederationIdentifier value</description>
    <formula>FederationIdentifier</formula>
    <inlineHelpText>Copy of FederationIdentifier value</inlineHelpText>
    <label>IDM - FederationIdentifier</label>
    <type>Text</type>
</CustomField>