force-app/main/default/objects/User/fields/IDM_GRID_Deactivation_Callout_Message__c.field-meta.xml
<CustomField>
    <fullName>IDM_GRID_Deactivation_Callout_Message__c</fullName>
    <label>IDM_GRID_Deactivation_Callout_Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>