force-app/main/default/objects/User/fields/IDM_Last_Attempted_Date_via_API__c.field-meta.xml
<CustomField>
    <fullName>IDM_Last_Attempted_Date_via_API__c</fullName>
    <description>Last attempted date/time to call API via job/adhoc code</description>
    <inlineHelpText>Last attempted date/time to call API via job/adhoc code</inlineHelpText>
    <label>IDM - Last Attempted Date via API</label>
    <type>DateTime</type>
</CustomField>