force-app/main/default/objects/User/fields/IDM_Revoke_SOCRM_Role_Call_Initiated__c.field-meta.xml
<CustomField>
    <fullName>IDM_Revoke_SOCRM_Role_Call_Initiated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>IDM - Revoke SOCRM Role - API Call Initiated?</description>
    <inlineHelpText>IDM - Revoke SOCRM Role - API Call Initiated?</inlineHelpText>
    <label>IDM - Revoke SOCRM Role - Call Initiated</label>
    <type>Checkbox</type>
</CustomField>