force-app/main/default/objects/User/fields/IDM_Revoke_SOCRM_Role_Call_Response__c.field-meta.xml
<CustomField>
    <fullName>IDM_Revoke_SOCRM_Role_Call_Response__c</fullName>
    <description>IDM - Revoke SOCRM Role - API Call Response</description>
    <inlineHelpText>IDM - Revoke SOCRM Role - API Call Response</inlineHelpText>
    <label>IDM - Revoke SOCRM Role - Call Response</label>
    <length>255</length>
    <type>Text</type>
</CustomField>