force-app/main/default/objects/User/fields/IDM_Revoke_SOCRM_Role_Call_Success__c.field-meta.xml
<CustomField>
    <fullName>IDM_Revoke_SOCRM_Role_Call_Success__c</fullName>
    <defaultValue>false</defaultValue>
    <description>IDM - Revoke SOCRM Role - API Call Succeeded?</description>
    <inlineHelpText>IDM - Revoke SOCRM Role - API Call Succeeded?</inlineHelpText>
    <label>IDM - Revoke SOCRM Role - Call Success</label>
    <type>Checkbox</type>
</CustomField>