force-app/main/default/objects/User/fields/IDM_Revoke_SOCRM_Role_Date__c.field-meta.xml
<CustomField>
    <fullName>IDM_Revoke_SOCRM_Role_Date__c</fullName>
    <description>Date/Time at which SOCRM Role Revocation was made through API</description>
    <inlineHelpText>Date/Time at which SOCRM Role Revocation was made through API</inlineHelpText>
    <label>IDM - Revoke SOCRM Role - Date</label>
    <type>DateTime</type>
</CustomField>