force-app/main/default/objects/User/fields/IDM_SOCRM_Role_Assigned__c.field-meta.xml
<CustomField>
    <fullName>IDM_SOCRM_Role_Assigned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SOCRMAccessRole has been assigned for this IDM User (manual or automated)</description>
    <inlineHelpText>SOCRMAccessRole has been assigned for this IDM User (manual or automated)</inlineHelpText>
    <label>IDM - SOCRM Role - Assigned</label>
    <type>Checkbox</type>
</CustomField>