force-app/main/default/objects/User/fields/IDM_SOCRM_Role_Revoked__c.field-meta.xml
<CustomField>
    <fullName>IDM_SOCRM_Role_Revoked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>IDM - SOCRM Role - Revoked(manual or automated)?</description>
    <inlineHelpText>IDM - SOCRM Role - Revoked(manual or automated)?</inlineHelpText>
    <label>IDM - SOCRM Role - Revoked</label>
    <type>Checkbox</type>
</CustomField>