force-app/main/default/objects/User/fields/IDM_SOCRM_Role_Seeding_Required__c.field-meta.xml
<CustomField>
    <fullName>IDM_SOCRM_Role_Seeding_Required__c</fullName>
    <description>IDM Configuration to add SOCRM role needed for this external user?</description>
    <formula>!ISPICKVAL(UserType, &apos;Standard&apos;) &amp;&amp;  !ISBLANK(ContactId) &amp;&amp; IsActive &amp;&amp;  !IDM_SOCRM_Role_Assigned__c &amp;&amp;  CONTAINS(  $Setup.IDM_Settings__c.SOCRM_SFDC_Profiles__c,  Profile.Name )</formula>
    <inlineHelpText>IDM Configuration to add SOCRM role needed for this external user?</inlineHelpText>
    <label>IDM - SOCRM Role Seeding Required?</label>
    <type>Checkbox</type>
</CustomField>