force-app/main/default/objects/User/fields/is_Created__c.field-meta.xml
<CustomField>
    <fullName>is_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Created</label>
    <type>Checkbox</type>
</CustomField>