force-app/main/default/objects/User/fields/JobFamily__c.field-meta.xml
<CustomField>
    <fullName>JobFamily__c</fullName>
    <label>Job Family</label>
    <length>80</length>
    <type>Text</type>
</CustomField>