force-app/main/default/objects/User/fields/LegalFirstName__c.field-meta.xml
<CustomField>
    <fullName>LegalFirstName__c</fullName>
    <label>Legal First Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>