force-app/main/default/objects/User/fields/LISN_License_Status__c.field-meta.xml
<CustomField>
    <fullName>LISN_License_Status__c</fullName>
    <description>For SDS- 2628:LEAD MGMT: LinkedIn Sales Navigator User Field</description>
    <label>LISN License Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No License</fullName>
            </value>
            <value>
                <fullName>License</fullName>
            </value>
            <value>
                <fullName>Trial License</fullName>
            </value>
            <value>
                <fullName>Team Link Extend</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>