force-app/main/default/objects/User/fields/ManagerEmployeeNumber__c.field-meta.xml
<CustomField>
    <fullName>ManagerEmployeeNumber__c</fullName>
    <formula>Manager.EmployeeNumber</formula>
    <label>Manager Employee Number</label>
    <type>Text</type>
</CustomField>