force-app/main/default/objects/User/fields/ManagerGUID__c.field-meta.xml
<CustomField>
    <fullName>ManagerGUID__c</fullName>
    <description>GUID of the Manager User - Used for setting MangerId</description>
    <label>ManagerGUID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>