force-app/main/default/objects/User/fields/ManagerName__c.field-meta.xml
<CustomField>
    <fullName>ManagerName__c</fullName>
    <formula>Manager.FirstName &amp; &quot; &quot; &amp;  Manager.LastName</formula>
    <label>Manager Name</label>
    <type>Text</type>
</CustomField>