force-app/main/default/objects/User/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <label>Market</label>
    <length>30</length>
    <type>Text</type>
</CustomField>