force-app/main/default/objects/User/fields/MiddleInitial__c.field-meta.xml
<CustomField>
    <fullName>MiddleInitial__c</fullName>
    <label>Middle Initial</label>
    <length>1</length>
    <type>Text</type>
</CustomField>