force-app/main/default/objects/User/fields/NTACCOUNT__c.field-meta.xml
<CustomField>
    <fullName>NTACCOUNT__c</fullName>
    <description>NVIDIA domain account</description>
    <label>NTACCOUNT</label>
    <length>20</length>
    <type>Text</type>
</CustomField>