force-app/main/default/objects/User/fields/Org3EmployeeNumber__c.field-meta.xml
<CustomField>
    <fullName>Org3EmployeeNumber__c</fullName>
    <label>Org3 Employee Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>