force-app/main/default/objects/User/fields/Org4EmployeeNumber__c.field-meta.xml
<CustomField>
    <fullName>Org4EmployeeNumber__c</fullName>
    <label>Org4 Employee Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>