force-app/main/default/objects/User/fields/Org5EmployeeNumber__c.field-meta.xml
<CustomField>
    <fullName>Org5EmployeeNumber__c</fullName>
    <label>Org5 Employee Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>