force-app/main/default/objects/User/fields/Outreach_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Outreach_User_ID__c</fullName>
    <description>SDS-3169</description>
    <label>Outreach User ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>