force-app/main/default/objects/User/fields/PartnerInitiatedOrNVInitiated__c.field-meta.xml
<CustomField>
    <fullName>PartnerInitiatedOrNVInitiated__c</fullName>
    <description>Used in Enterprise KPI dashboards</description>
    <label>PartnerInitiatedOrNVInitiated</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NV Initiated</fullName>
            </value>
            <value>
                <fullName>Partner Initiated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>