force-app/main/default/objects/User/fields/Regional_Sales_Ops_Contact__c.field-meta.xml
<CustomField>
    <fullName>Regional_Sales_Ops_Contact__c</fullName>
    <label>Regional Sales Ops Contact</label>
    <relationshipName>RegionalContact</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>