force-app/main/default/objects/User/fields/SAML_Email__c.field-meta.xml
<CustomField>
    <fullName>SAML_Email__c</fullName>
    <description>Used in Commercial Tribe SAML Custom Attribute</description>
    <formula>Email</formula>
    <inlineHelpText>Used in Commercial Tribe SAML Custom Attribute</inlineHelpText>
    <label>SAML Email (NOT USED)</label>
    <type>Text</type>
</CustomField>