force-app/main/default/objects/User/fields/Second_Half_2H_Quota__c.field-meta.xml
<CustomField>
    <fullName>Second_Half_2H_Quota__c</fullName>
    <label>Second Half (2H) Quota</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>