force-app/main/default/objects/User/fields/Service_Queue_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Queue_Type__c</fullName>
    <label>Service Queue Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>JTP L1</fullName>
            </value>
            <value>
                <fullName>JTP L2</fullName>
            </value>
            <value>
                <fullName>NCR L1</fullName>
            </value>
            <value>
                <fullName>NCR L2</fullName>
            </value>
            <value>
                <fullName>L3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>