force-app/main/default/objects/User/fields/SubBusinessArea__c.field-meta.xml
<CustomField>
    <fullName>SubBusinessArea__c</fullName>
    <label>Sub Business Area</label>
    <length>80</length>
    <type>Text</type>
</CustomField>