force-app/main/default/objects/User/fields/Tableau_API_Response_Failure__c.field-meta.xml
<CustomField>
    <fullName>Tableau_API_Response_Failure__c</fullName>
    <label>Tableau API Response Failure</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>