force-app/main/default/objects/User/fields/Tableau_Do_Not_Sync__c.field-meta.xml
<CustomField>
    <fullName>Tableau_Do_Not_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tableau Do Not Sync</label>
    <type>Checkbox</type>
</CustomField>