force-app/main/default/objects/User/fields/Tableau_IsUserCreated__c.field-meta.xml
<CustomField>
    <fullName>Tableau_IsUserCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if the SFDC user is created in Tableau</description>
    <label>Tableau_IsUserCreated?</label>
    <type>Checkbox</type>
</CustomField>