force-app/main/default/objects/User/fields/Tableau_IsUserDeleted__c.field-meta.xml
<CustomField>
    <fullName>Tableau_IsUserDeleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if the SFDC user is deleted from Tableau</description>
    <label>Tableau_IsUserDeleted?</label>
    <type>Checkbox</type>
</CustomField>