force-app/main/default/objects/User/fields/Tableau_UserCreationDateTime__c.field-meta.xml
<CustomField>
    <fullName>Tableau_UserCreationDateTime__c</fullName>
    <description>The SFDC user&apos;s creation date/time in Tableau</description>
    <label>Tableau_UserCreationDateTime</label>
    <type>DateTime</type>
</CustomField>