force-app/main/default/objects/User/fields/Tableau_UserCreationLastAPICallResponse__c.field-meta.xml
<CustomField>
    <fullName>Tableau_UserCreationLastAPICallResponse__c</fullName>
    <description>The response of SFDC user&apos;s creation call to Tableau server</description>
    <label>Tableau_UserCreationLastAPICallResponse</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>