force-app/main/default/objects/User/fields/Tableau_UserDeletionDateTime__c.field-meta.xml
<CustomField>
    <fullName>Tableau_UserDeletionDateTime__c</fullName>
    <description>The SFDC user&apos;s deletion date/time from the Tableau server</description>
    <label>Tableau_UserDeletionDateTime</label>
    <type>DateTime</type>
</CustomField>