force-app/main/default/objects/User/fields/Tableau_UserDeletionLastAPICallResponse__c.field-meta.xml
<CustomField>
    <fullName>Tableau_UserDeletionLastAPICallResponse__c</fullName>
    <description>The response of SFDC user&apos;s deletion call from the Tableau server</description>
    <label>Tableau_UserDeletionLastAPICallResponse</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>