force-app/main/default/objects/User/fields/Tableau_UserId__c.field-meta.xml
<CustomField>
    <fullName>Tableau_UserId__c</fullName>
    <description>The user&apos;s Tableau UserId</description>
    <label>Tableau_UserId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>