force-app/main/default/objects/User/fields/Tableau_Username__c.field-meta.xml
<CustomField>
    <fullName>Tableau_Username__c</fullName>
    <description>The Tableau username of the user</description>
    <label>Tableau_Username</label>
    <type>Email</type>
</CustomField>