force-app/main/default/objects/User/fields/TerminationDate__c.field-meta.xml
<CustomField>
    <fullName>TerminationDate__c</fullName>
    <label>Termination Date</label>
    <type>Date</type>
</CustomField>